Release v1.2.0 (#9)
* Version 11 (ctrl+s, stop animation buttons and others)

* Version 11 (roundRectangle and arcs editing)

* remove code in createnetfork

* create UI forms for statistic monitor and formula information

* integrate chart into statistic module

* dynamic chart painting during simulation

* send data from simulation to chart after time move

* fix display suggestions

* implement formula field validation

* update formula validation and calculation

* create tooltip when hover over the chart data point

* add export chart as image

* add possibility to plot multiple simulations

* send data from simulation to chart after time move

* add char autoscaling, markers toggle and chart scaling

* make chart paint async

* refactor chart menu, create chart drawings

* create functionality to make text annotations on chart

* create new params for statistic data collection configuration, create async method for data paint on chart

* send data from simulation to chart after time move

* create new functions, fix formula validations, modify config

* add hotkey for statistic monitor open

* fix drawings make them selectable and remove on delete key press

* add option to turn of monitor, clean code

* fix suggestions

* fix suggestions

* create general statistic monitor class

* add possibility to calculate formula for petriObj model

* support petri obj model formula calculation

* change syntax for petri obj model function arguments, add validation for code based formula

* refactor statistic console print

* add statistic data collection for PetriObjModel

* crete example for statistic monitor usage

* fix bug with last segment statistic collection

* create functionality to perform multiple runs

* fix formula suggestions

* fix data collection and stat build wait time

* fix small bugs with PetriObj model statistic collection

* create functionality to perform multiple runs

* Added missing dependencies to pom.xml;
Added manifest to pom.xml;
Resolved 