@@ -1,6 +1,5 @@
 package ua.stetsenkoinna.graphpresentation;
 
-import ua.stetsenkoinna.LibNet.NetLibraryManager;
 import ua.stetsenkoinna.PetriObj.ExceptionInvalidNetStructure;
 import ua.stetsenkoinna.PetriObj.PetriNet;
 import ua.stetsenkoinna.PetriObj.PetriP;
@@ -20,23 +19,30 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
+import java.io.RandomAccessFile;
 import java.util.Arrays;
 import java.util.ArrayList;
-import java.util.List;
+import java.util.regex.Pattern;
+import java.util.regex.Matcher;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.awt.Point;
 
-import javax.swing.*;
+import javax.swing.JFrame;
+import javax.swing.JTextArea;
+import javax.swing.JScrollPane;
 
+import ua.stetsenkoinna.config.FilePathConfig;
 import ua.stetsenkoinna.graphnet.GraphArcIn;
 import ua.stetsenkoinna.graphnet.GraphArcOut;
 import ua.stetsenkoinna.graphnet.GraphPetriPlace;
 import ua.stetsenkoinna.graphnet.GraphPetriTransition;
 import ua.stetsenkoinna.graphnet.GraphPetriNet;
-import java.awt.Component;
+import ua.stetsenkoinna.utils.SafeParsingUtils;
+import ua.stetsenkoinna.utils.MessageHelper;
 
 import java.awt.geom.Point2D;
+import java.nio.file.Path;
 import java.util.Objects;
 
 /**
@@ -45,21 +51,71 @@ import java.util.Objects;
  */
 public class FileUse {
 
-    private static final String PATTERN = ".pns";
+    private final String PATTERN = ".pns";
     
-    public static String openFile(PetriNetsPanel panel, JFrame frame) throws ExceptionInvalidNetStructure {
+    Class netLibraryClass;
+
+    public String openFile(PetriNetsPanel panel, JFrame frame) throws ExceptionInvalidNetStructure {
         String pnetName = "";
         FileDialog fdlg;
         fdlg = new FileDialog(frame, "Open a file ",
                 FileDialog.LOAD);
         fdlg.setVisible(true);
-        FileInputStream fis = null;
-        ObjectInputStream ois = null;
-        try {
-            // System.out.println("Opening file '" + fdlg.getDirectory() + fdlg.getFile() + "'");
-            fis = new FileInputStream(fdlg.getDirectory() + fdlg.getFile());
-            ois = new ObjectInputStream(fis);
-            GraphPetriNet net = ((GraphPetriNet) ois.readObject()).clone();
+
+        if (fdlg.getFile() == null) {
+            return null; // User cancelled the dialog
+        }
+
+        String filePath = fdlg.getDirectory() + fdlg.getFile();
+        File file = new File(filePath);
+
+        // Validate file before attempting to read
+        if (!file.exists()) {
+            MessageHelper.showError(frame, "File does not exist: " + filePath);
+            return null;
+        }
+
+        if (!file.canRead()) {
+            MessageHelper.showError(frame, "Cannot read file: " + filePath);
+            return null;
+        }
+
+        if (file.length() == 0) {
+            MessageHelper.showError(frame, "File is empty: " + filePath);
+            return null;
+        }
+
+        // Check if file is too small to contain a valid serialized object
+        if (file.length() < 50) { // Minimum size for a serialized object
+            MessageHelper.showError(frame,
+                "File appears to be corrupted or incomplete (too small): " + filePath +
+                "\nFile size: " + file.length() + " bytes");
+            return null;
+        }
+
+        try (FileInputStream fis = new FileInputStream(file);
+             ObjectInputStream ois = new ObjectInputStream(fis)) {
+
+            // System.out.println("Opening file '" + filePath + "'");
+            Object loadedObject = ois.readObject();
+
+            GraphPetriNet net;
+
+            // Check if the loaded object is GraphPetriNet or PetriNet
+            if (loadedObject instanceof GraphPetriNet) {
+                net = ((GraphPetriNet) loadedObject).clone();
+            } else if (loadedObject instanceof PetriNet) {
+                // Convert PetriNet to GraphPetriNet
+                PetriNet petriNet = (PetriNet) loadedObject;
+                PetriNetsFrame petriNetsFrame = (PetriNetsFrame) frame;
+                JScrollPane pane = petriNetsFrame.GetPetriNetPanelScrollPane();
+                Point paneCenter = new Point(pane.getLocation().x + pane.getBounds().width / 2,
+                                           pane.getLocation().y + pane.getBounds().height / 2);
+                net = generateGraphNetBySimpleNet(panel, petriNet, paneCenter);
+            } else {
+                throw new ClassCastException("Unsupported file format. Expected GraphPetriNet or PetriNet, but found: "
+                    + loadedObject.getClass().getName());
+            }
             
             // if there are transitions where b != 0, find them and
             // ask the user if they want to remove exit times from buffers
@@ -70,54 +126,53 @@ public class FileUse {
                     .toArray(GraphPetriTransition[]::new);
             if (tWithNon0Buffers.length != 0) {
                 // display dialog
-                int result = JOptionPane.showConfirmDialog((Component) null, "There are transitions in this net with non-empty buffers. Do you want to clear them?",
-                                "Buffers reset", JOptionPane.OK_CANCEL_OPTION);
-                if (result == JOptionPane.OK_OPTION) {
+                if (MessageHelper.showConfirmation(frame,
+                    "There are transitions in this net with non-empty buffers. Do you want to clear them?")) {
                     for (GraphPetriTransition trans : tWithNon0Buffers) {
-                        // removing all saved exit times 
+                        // removing all saved exit times
                         trans.getPetriTransition().getTimeOut().clear();
                         trans.getPetriTransition().getTimeOut().add(Double.MAX_VALUE);
                         trans.getPetriTransition().setBuffer(0);
                     }
                 }
             }
-            
+
             panel.addGraphNet(net);
             pnetName = net.getPetriNet().getName();
-            ois.close();
             panel.repaint();
 
         } catch (FileNotFoundException e) {
-            System.out.println("Such file was not found");
-        } catch (ClassNotFoundException | IOException ex) {
-            Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
+            MessageHelper.showException(frame, "File not found", e);
+        } catch (ClassNotFoundException ex) {
+            MessageHelper.showException(frame, "Cannot open file: incompatible file format or missing classes", ex);
+        } catch (java.io.EOFException ex) {
+            MessageHelper.showError(frame,
+                "Error reading file: The file appears to be corrupted or incomplete.\n\n" +
+                "Possible causes:\n" +
+                "• File was not saved properly\n" +
+                "• File was created with a different version of the application\n" +
+                "• File was damaged or truncated\n" +
+                "• Network interruption during file transfer\n\n" +
+                "Please try:\n" +
+                "• Using a backup copy of the file\n" +
+                "• Re-saving the file from the original source\n" +
+                "• Importing from PNML format instead (File → Import PNML)");
+            Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, "EOF error during file reading", ex);
+        } catch (IOException ex) {
+            MessageHelper.showException(frame, "Error reading file", ex);
         } catch (CloneNotSupportedException ex) {
-            Logger.getLogger(FileUse.class.getName()).log(Level.SEVERE, null, ex);
-        } finally {
-            try {
-                fis.close();
-            } catch (IOException ex) {
-                Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
-            } catch (NullPointerException e) {
-                return null;
-            }
-            try {
-                ois.close();
-            } catch (IOException ex) {
-                Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
-            } catch (NullPointerException e) {
-                return null;
-            }
-
+            MessageHelper.showException(frame, "Error processing file data", ex);
+        } catch (ClassCastException ex) {
+            MessageHelper.showException(frame, "Unsupported file format", ex);
         }
-        return pnetName.substring(0, pnetName.length());
+        return pnetName;
     }
 
-    public static void newWorksheet(PetriNetsPanel panel) {
+    public void newWorksheet(PetriNetsPanel panel) {
         panel.setNullPanel();
     }
 
-    public static void saveGraphNetAs(PetriNetsPanel panel, JFrame frame) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
+    public void saveGraphNetAs(PetriNetsPanel panel, JFrame frame) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
         FileDialog fdlg;
         fdlg = new FileDialog(frame,
                 "Save Graph Petri net as...",
@@ -136,11 +191,13 @@ public class FileUse {
             Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
         } finally {
             try {
+                assert fos != null;
                 fos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
             }
             try {
+                assert oos != null;
                 oos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
@@ -148,7 +205,7 @@ public class FileUse {
         }
     }
 
-    public static void saveGraphNetAs(GraphPetriNet net, JFrame frame) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
+    public void saveGraphNetAs(GraphPetriNet net, JFrame frame) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
         FileDialog fdlg;
         fdlg = new FileDialog(frame,
                 "Save Graph Petri net as...",
@@ -158,7 +215,7 @@ public class FileUse {
         ObjectOutputStream oos = null;
         try {
             fdlg.setFilenameFilter(null);
-            //System.out.println("Saving GraphNet as '" + fdlg.getDirectory() + fdlg.getFile() + "'");
+            System.out.println("Saving GraphNet as '" + fdlg.getDirectory() + fdlg.getFile() + "'");
             net.createPetriNet(fdlg.getFile());
             fos = new FileOutputStream(fdlg.getDirectory() + fdlg.getFile() + PATTERN);
             oos = new ObjectOutputStream(fos);
@@ -168,11 +225,13 @@ public class FileUse {
             Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
         } finally {
             try {
+                assert fos != null;
                 fos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
             }
             try {
+                assert oos != null;
                 oos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
@@ -180,7 +239,7 @@ public class FileUse {
         }
     }
 
-    public static void savePetriNetAs(PetriNetsPanel panel, JFrame frame) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
+    public void savePetriNetAs(PetriNetsPanel panel, JFrame frame) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
         FileDialog fdlg;
         fdlg = new FileDialog(frame,
                 "Save Petri net as...",
@@ -190,7 +249,7 @@ public class FileUse {
         ObjectOutputStream oos = null;
         try {
             fdlg.setFilenameFilter(null);
-            // System.out.println("Saving PetriNet as '" + fdlg.getDirectory() + fdlg.getFile() + "'");
+            System.out.println("Saving PetriNet as '" + fdlg.getDirectory() + fdlg.getFile() + "'");
             panel.getGraphNet().createPetriNet(fdlg.getFile());
             fos = new FileOutputStream(fdlg.getDirectory() + fdlg.getFile() + PATTERN);
             oos = new ObjectOutputStream(fos);
@@ -200,11 +259,13 @@ public class FileUse {
             Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
         } finally {
             try {
+                assert fos != null;
                 fos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
             }
             try {
+                assert oos != null;
                 oos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
@@ -212,7 +273,7 @@ public class FileUse {
         }
     }
 
-    public static boolean saveGraphNet(GraphPetriNet pnet, String name) throws ExceptionInvalidNetStructure {  // saving graph in the same folder as project
+    public boolean saveGraphNet(GraphPetriNet pnet, String name) throws ExceptionInvalidNetStructure {  // saving graph in the same folder as project
         FileOutputStream fos = null;
         ObjectOutputStream oos = null;
         if (name.equalsIgnoreCase("")) {
@@ -221,7 +282,12 @@ public class FileUse {
 
         try {
             pnet.createPetriNet(name);
-            File file = new File(name + ".pns");
+            // Create temp directory if it doesn't exist
+            File tempDir = new File("temp");
+            if (!tempDir.exists()) {
+                tempDir.mkdirs();
+            }
+            File file = new File(tempDir, name + ".pns");
             // System.out.println("Saving path = " + file.getAbsolutePath());
             fos = new FileOutputStream(file);
             oos = new ObjectOutputStream(fos);
@@ -233,11 +299,13 @@ public class FileUse {
             Logger.getLogger(FileUse.class.getName()).log(Level.SEVERE, null, ex);
         } finally {
             try {
+                assert fos != null;
                 fos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
             }
             try {
+                assert oos != null;
                 oos.close();
             } catch (IOException ex) {
                 Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
@@ -246,21 +314,19 @@ public class FileUse {
         return true;
     }
 
-    public static GraphPetriNet generateGraphNetBySimpleNet(PetriNetsPanel panel, PetriNet net, Point paneCenter) { // added by Katya 16.10.2016
-        GraphPetriNet currentNet = panel.getGraphNet();
-        List<GraphElement> choosenElements = panel.getChoosenElements();
-        choosenElements.clear();
-        ArrayList<GraphPetriPlace> grPlaces = currentNet.getGraphPetriPlaceList();
-        ArrayList<GraphPetriTransition> grTransitions = currentNet.getGraphPetriTransitionList();
-        ArrayList<GraphArcIn> grArcIns = currentNet.getGraphArcInList();
-        ArrayList<GraphArcOut> grArcOuts = currentNet.getGraphArcOutList();
+    public GraphPetriNet generateGraphNetBySimpleNet(PetriNetsPanel panel, PetriNet net, Point paneCenter) { // added by Katya 16.10.2016
+        // Create new lists for the new GraphPetriNet instead of modifying existing ones
+        ArrayList<GraphPetriPlace> grPlaces = new ArrayList<>();
+        ArrayList<GraphPetriTransition> grTransitions = new ArrayList<>();
+        ArrayList<GraphArcIn> grArcIns = new ArrayList<>();
+        ArrayList<GraphArcOut> grArcOuts = new ArrayList<>();
 
         ArrayList<PetriP> availPetriPlaces = new ArrayList<>(Arrays.asList(net.getListP())); // modified by Katya 20.11.2016 (including the "while" and 1st "for" loop)
         ArrayList<PetriT> availPetriTrans = new ArrayList<>(Arrays.asList(net.getListT()));
         ArrayList<VerticalSet> sets = new ArrayList<>();
 
         // first transition
-        PetriT firstTran = availPetriTrans.remove(0);
+        PetriT firstTran = availPetriTrans.removeFirst();
         VerticalSet firstSet = new VerticalSet(false);
         firstSet.AddElement(firstTran);
         sets.add(firstSet);
@@ -287,7 +353,7 @@ public class FileUse {
                         PetriP place = (PetriP) placeElem;
                         if (place.getNumber() == outArc.getNumP()) {
                             for (PetriT tran : availPetriTrans) {
-                                if (!inTrans.contains(tran) && tran.getNumber() == outArc.getNumT()) {
+                                if (tran.getNumber() == outArc.getNumT()) {
                                     inTrans.add(tran);
                                 }
                             }
@@ -310,7 +376,7 @@ public class FileUse {
 
                 if (!inTrans.isEmpty()) {
                     if (lastSetIndex == 0) {
-                        sets.add(0, new VerticalSet(!lastSet.IsForPlaces()));
+                        sets.addFirst(new VerticalSet(!lastSet.IsForPlaces()));
                         lastSetIndex = 1;
                     }
                 }
@@ -338,7 +404,7 @@ public class FileUse {
                         PetriT tran = (PetriT) tranElem;
                         if (tran.getNumber() == inArc.getNumT()) {
                             for (PetriP place : availPetriPlaces) {
-                                if (!inPlaces.contains(place) && place.getNumber() == inArc.getNumP()) {
+                                if (place.getNumber() == inArc.getNumP()) {
                                     inPlaces.add(place);
                                 }
                             }
@@ -361,7 +427,7 @@ public class FileUse {
 
                 if (!inPlaces.isEmpty()) {
                     if (lastSetIndex == 0) {
-                        sets.add(0, new VerticalSet(!lastSet.IsForPlaces()));
+                        sets.addFirst(new VerticalSet(!lastSet.IsForPlaces()));
                         lastSetIndex = 1;
                     }
                 }
@@ -386,11 +452,11 @@ public class FileUse {
             lastSet.SetAsReady();
         }
 
-        double x = 0, y = 0;
+        double x = 0, y;
 
         boolean hasLoops = false; // "hasLoops" added by Katya 04.12.2016
-        firstSet = sets.get(0);
-        VerticalSet lastSet = sets.get(sets.size() - 1);
+        firstSet = sets.getFirst();
+        VerticalSet lastSet = sets.getLast();
         if (!Objects.equals(lastSet.IsForPlaces(), firstSet.IsForPlaces())) {
             VerticalSet setWithPlaces = firstSet.IsForPlaces() ? firstSet : lastSet;
             VerticalSet setWithTrans = firstSet.IsForPlaces() ? lastSet : firstSet;
@@ -447,7 +513,7 @@ public class FileUse {
                 ArrayList<PetriMainElement> elements = set.GetElements();
                 int size = elements.size();
                 x += 80;
-                y = ((size % 2) == 0) ? (- (size / 2 * 80) - 40) : (- (size / 2 * 80) - 80);
+                y = ((size % 2) == 0) ? (- ((double) size / 2 * 80) - 40) : (- ((double) size / 2 * 80) - 80);
                 for (PetriMainElement elem : elements) {
                     y += 80;
                     if (set.IsForPlaces()) {
@@ -455,13 +521,11 @@ public class FileUse {
                         GraphPetriPlace grPlace = new GraphPetriPlace(place, PetriNetsPanel.getIdElement());
                         grPlace.setNewCoordinates(new Point2D.Double(x, y));
                         grPlaces.add(grPlace);
-                        //choosenElements.add(grPlace);
                     } else {
                         PetriT tran = (PetriT)elem;
                         GraphPetriTransition grTran = new GraphPetriTransition(tran, PetriNetsPanel.getIdElement());
                         grTran.setNewCoordinates(new Point2D.Double(x, y));
                         grTransitions.add(grTran);
-                        //choosenElements.add(grTran);
                     }
                 }
             }
@@ -473,7 +537,7 @@ public class FileUse {
                 ArrayList<PetriMainElement> elements = set.GetElements();
                 int size = elements.size();
                 x += 80;
-                y = ((size % 2) == 0) ? (- (size / 2 * 80) - 40) : (- (size / 2 * 80) - 80);
+                y = ((size % 2) == 0) ? (- ((double) size / 2 * 80) - 40) : (- ((double) size / 2 * 80) - 80);
                 for (PetriMainElement elem : elements) {
                     y += 80;
                     if (set.IsForPlaces()) {
@@ -481,13 +545,11 @@ public class FileUse {
                         GraphPetriPlace grPlace = new GraphPetriPlace(place, PetriNetsPanel.getIdElement());
                         grPlace.setNewCoordinates(new Point2D.Double(x, y));
                         grPlaces.add(grPlace);
-                        //choosenElements.add(grPlace);
                     } else {
                         PetriT tran = (PetriT)elem;
                         GraphPetriTransition grTran = new GraphPetriTransition(tran, PetriNetsPanel.getIdElement());
                         grTran.setNewCoordinates(new Point2D.Double(x, y));
                         grTransitions.add(grTran);
-                        //choosenElements.add(grTran);
                     }
                 }
             }
@@ -498,7 +560,7 @@ public class FileUse {
                 ArrayList<PetriMainElement> elements = set.GetElements();
                 int size = elements.size();
                 x -= 80;
-                y = ((size % 2) == 0) ? (- (size / 2 * 80) - 40) : (- (size / 2 * 80) - 80);
+                y = ((size % 2) == 0) ? (- ((double) size / 2 * 80) - 40) : (- ((double) size / 2 * 80) - 80);
                 y += 160;
 
                 for (PetriMainElement elem : elements) {
@@ -508,13 +570,11 @@ public class FileUse {
                         GraphPetriPlace grPlace = new GraphPetriPlace(place, PetriNetsPanel.getIdElement());
                         grPlace.setNewCoordinates(new Point2D.Double(x, y));
                         grPlaces.add(grPlace);
-                        //choosenElements.add(grPlace);
                     } else {
                         PetriT tran = (PetriT)elem;
                         GraphPetriTransition grTran = new GraphPetriTransition(tran, PetriNetsPanel.getIdElement());
                         grTran.setNewCoordinates(new Point2D.Double(x, y));
                         grTransitions.add(grTran);
-                        // choosenElements.add(grTran);
                     }
                 }
             }
@@ -536,84 +596,356 @@ public class FileUse {
             }
             grInArc.settingNewArc(beginPlace);
             grInArc.finishSettingNewArc(endTransition);
-            grInArc.setPetriElements(); // added by Katya 04.12.2016 (this line and the next two)
+            grInArc.setPetriElements(); // this line and the next two
             grInArc.changeBorder();
             grInArc.updateCoordinates();
             grArcIns.add(grInArc);
         }
 
         for (ArcOut outArc : net.getArcOut()) {
-            GraphArcOut grOutArc = new GraphArcOut(outArc);
-            GraphPetriTransition beginTransition = null;
-            for (GraphPetriTransition grTran : grTransitions) {
-                if (grTran.getNumber() == outArc.getNumT()) {
-                    beginTransition = grTran;
-                }
-            }
-            GraphPetriPlace endPlace = null;
-            for (GraphPetriPlace grPlace : grPlaces) {
-                if (grPlace.getNumber() == outArc.getNumP()) {
-                    endPlace = grPlace;
-                }
-            }
-            grOutArc.settingNewArc(beginTransition);
-            grOutArc.finishSettingNewArc(endPlace);
-            grOutArc.setPetriElements(); // added by Katya 04.12.2016 (this line and the next two)
-            grOutArc.changeBorder();
-            grOutArc.updateCoordinates();
+            GraphArcOut grOutArc = getGraphArcOut(outArc, grTransitions, grPlaces);
             grArcOuts.add(grOutArc);
         }
 
-        // added by Katya 04.12.2016
         for (GraphArcOut arcOut : grArcOuts) {
             for (GraphArcIn arcIn : grArcIns) {
-                int inBeginId = ((GraphPetriPlace)arcIn.getBeginElement()).getId();
-                int inEndId = ((GraphPetriTransition)arcIn.getEndElement()).getId();
-                int outBeginId = ((GraphPetriTransition)arcOut.getBeginElement()).getId();
-                int outEndId = ((GraphPetriPlace)arcOut.getEndElement()).getId();
+                int inBeginId = arcIn.getBeginElement().getId();
+                int inEndId = arcIn.getEndElement().getId();
+                int outBeginId = arcOut.getBeginElement().getId();
+                int outEndId = arcOut.getEndElement().getId();
                 if (inBeginId == outEndId && inEndId == outBeginId) {
                     arcIn.twoArcs(arcOut);
                     arcIn.updateCoordinates();
                 }
             }
         }
-        GraphPetriNet graphNet = new GraphPetriNet(net, grPlaces, grTransitions, grArcIns, grArcOuts);
+        GraphPetriNet graphNet =  new GraphPetriNet(net, grPlaces, grTransitions, grArcIns, grArcOuts);
 
         graphNet.changeLocation(paneCenter);
         return graphNet;
     }
 
-    public static String openMethod(
-            final PetriNetsPanel panel,
-            final String methodFullName,
-            final JFrame frame,
-            final NetLibraryManager netLibraryManager
-    ) throws ExceptionInvalidNetStructure {
+    private static GraphArcOut getGraphArcOut(ArcOut outArc, ArrayList<GraphPetriTransition> grTransitions, ArrayList<GraphPetriPlace> grPlaces) {
+        GraphArcOut grOutArc = new GraphArcOut(outArc);
+        GraphPetriTransition beginTransition = null;
+        for (GraphPetriTransition grTran : grTransitions) {
+            if (grTran.getNumber() == outArc.getNumT()) {
+                beginTransition = grTran;
+            }
+        }
+        GraphPetriPlace endPlace = null;
+        for (GraphPetriPlace grPlace : grPlaces) {
+            if (grPlace.getNumber() == outArc.getNumP()) {
+                endPlace = grPlace;
+            }
+        }
+        grOutArc.settingNewArc(beginTransition);
+        grOutArc.finishSettingNewArc(endPlace);
+        grOutArc.setPetriElements(); // this line and the next two
+        grOutArc.changeBorder();
+        grOutArc.updateCoordinates();
+        return grOutArc;
+    }
+
+    @Deprecated
+    public PetriNet convertMethodToPetriNet(String methodText) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay { // added by Katya 16.10.2016
+        System.out.println(methodText);
+             
+        ArrayList<PetriP> d_P = new ArrayList<>();
+        ArrayList<PetriT> d_T = new ArrayList<>();
+        ArrayList<ArcIn> d_In = new ArrayList<>();
+        ArrayList<ArcOut> d_Out = new ArrayList<>();
+
+        String invalidMethodTextMessage = "Method text is invalid.";
+
+        Pattern pattern = Pattern.compile(Pattern.quote("d_P.add(new PetriP(\"") + "(.*?)" + Pattern.quote("\",") + "(.*?)" + Pattern.quote("));"));
+        Matcher matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            String pName = match1;
+            String markStr = match2;
+            int mark = SafeParsingUtils.tryParseInt(markStr) // added by Katya 08.12.2016
+                ? Integer.parseInt(markStr)
+                : 0;
+            d_P.add(new PetriP(pName, mark));
+
+            if (!SafeParsingUtils.tryParseInt(markStr)) { // added by Katya 08.12.2016
+                d_P.get(d_P.size() - 1).setMarkParam(markStr);
+            }
+        }
+        // pattern = Pattern.compile(Pattern.quote("d_T.add(new PetriT(\"") + "(.*?)" + Pattern.quote("\",") + "(.*?)" + Pattern.quote("));"));
+        pattern = Pattern.compile("d_T\\.add\\(new PetriT\\(\"(.*?)\",([^,)]*),?(.*?)\\)\\);");
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            String probability = matcher.group(3);
+            String tName = match1;
+            String parametrStr = match2;
+            double parametr = SafeParsingUtils.tryParseDouble(parametrStr) // added by Katya 08.12.2016
+                ? Double.parseDouble(parametrStr)
+                : 0;
+            PetriT place = new PetriT(tName, parametr);
+            if (!SafeParsingUtils.tryParseDouble(parametrStr)) { // added by Katya 08.12.2016
+                place.setParameterParam(parametrStr);
+            }
+            if (!(probability == null || probability.isBlank())) {
+                try {
+                    double prob = Double.parseDouble(probability);
+                    place.setProbability(prob);
+                } catch (NumberFormatException e) {
+                    // do nothing
+                }
+            }
+            d_T.add(place);
+            
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_T.get(") + "(.*?)" + Pattern.quote(").setDistribution(") + "(.*?)" + Pattern.quote(", d_T.get("));
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            int j = Integer.parseInt(match1);
+            String distribution = match2;
+            if ("\"exp\"".equals(distribution) || "\"unif\"".equals(distribution) || "\"norm\"".equals(distribution)) { // modified by Katya 08.12.2016
+                String distributionValue = distribution.substring(1, distribution.length() - 1);
+                d_T.get(j).setDistribution(distributionValue, d_T.get(j).getTimeServ());
+            } else {
+                d_T.get(j).setDistributionParam(distribution);
+            }
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_T.get(") + "(.*?)" + Pattern.quote(").setParamDeviation(") + "(.*?)" + Pattern.quote(");"));
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            int j = Integer.parseInt(match1);
+            try {
+                double paramDeviation = Double.parseDouble(match2);
+                d_T.get(j).setParamDeviation(paramDeviation);
+            } catch (NumberFormatException e) {
+                d_T.get(j).setParamDeviation(0);
+            }
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_T.get(") + "(.*?)" + Pattern.quote(").setPriority(") + "(.*?)" + Pattern.quote(");"));
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            int j = Integer.parseInt(match1);
+            String priorityStr = match2;
+            int priority = SafeParsingUtils.tryParseInt(priorityStr) // added by Katya 08.12.2016
+                ? Integer.parseInt(priorityStr)
+                : 0;
+            d_T.get(j).setPriority(priority);
+            if (!SafeParsingUtils.tryParseInt(priorityStr)) { // added by Katya 08.12.2016
+                d_T.get(j).setPriorityParam(priorityStr);
+            }
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_T.get(") + "(.*?)" + Pattern.quote(").setProbability(") + "(.*?)" + Pattern.quote(");"));
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            int j = Integer.parseInt(match1);
+            String probabilityStr = match2;
+            double probability = SafeParsingUtils.tryParseDouble(probabilityStr) // added by Katya 08.12.2016
+                ? Double.parseDouble(probabilityStr)
+                : 1;
+            d_T.get(j).setProbability(probability);
+            if (!SafeParsingUtils.tryParseDouble(probabilityStr)) { // added by Katya 08.12.2016
+                d_T.get(j).setProbabilityParam(probabilityStr);
+            }
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_In.add(new ArcIn(d_P.get(") + "(.*?)" + Pattern.quote("),d_T.get(")
+                + "(.*?)" + Pattern.quote("),") + "(.*?)" + Pattern.quote("));"));
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            String match3 = matcher.group(3);
+            int numP = Integer.parseInt(match1);
+            int numT = Integer.parseInt(match2);
+            String quantityStr = match3;
+            int quantity = SafeParsingUtils.tryParseInt(quantityStr) // added by Katya 08.12.2016
+                ? Integer.parseInt(quantityStr)
+                : 1;
+            d_In.add(new ArcIn(d_P.get(numP), d_T.get(numT), quantity));
+            if (!SafeParsingUtils.tryParseInt(quantityStr)) { // added by Katya 08.12.2016
+                d_In.get(d_In.size() - 1).setKParam(quantityStr);
+            }
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_In.get(") + "(.*?)" + Pattern.quote(").setInf(") + "(.*?)" + Pattern.quote(");")); // modified by Katya 08.12.2016
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            int j = Integer.parseInt(match1);
+            if ("true".equals(match2)) {
+                d_In.get(j).setInf(true);
+            } else {
+                d_In.get(j).setInfParam(match2);
+            }
+        }
+
+        pattern = Pattern.compile(Pattern.quote("d_Out.add(new ArcOut(d_T.get(") + "(.*?)" + Pattern.quote("),d_P.get(")
+                + "(.*?)" + Pattern.quote("),") + "(.*?)" + Pattern.quote("));"));
+        matcher = pattern.matcher(methodText);
+        while (matcher.find()) {
+            String match1 = matcher.group(1);
+            String match2 = matcher.group(2);
+            String match3 = matcher.group(3);
+            int numT = Integer.parseInt(match1);
+            int numP = Integer.parseInt(match2);
+            String quantityStr = match3;
+            int quantity = SafeParsingUtils.tryParseInt(quantityStr) // added by Katya 08.12.2016
+                ? Integer.parseInt(quantityStr)
+                : 1;
+            //System.out.println("q_Out "+quantity);
+            d_Out.add(new ArcOut(d_T.get(numT), d_P.get(numP), quantity));
+            if (!SafeParsingUtils.tryParseInt(quantityStr)) { // added by Katya 08.12.2016
+                d_Out.get(d_Out.size() - 1).setKParam(quantityStr);
+            }
+        }
+
+        String netName = "SampleNet" ;
+        pattern = Pattern.compile(Pattern.quote("PetriNet d_Net = new PetriNet(\"") + "(.*?)" + Pattern.quote("\","));
+        matcher = pattern.matcher(methodText);
+        if (matcher.find()) {
+            netName = matcher.group(1);
+        }
+        return new PetriNet(netName, d_P, d_T, d_In, d_Out);
+    }
+
+    public String openMethod(PetriNetsPanel panel, String methodFullName, JFrame frame) throws ExceptionInvalidNetStructure { // added by Katya 16.10.2016
+        String methodName = methodFullName.substring(0, methodFullName.indexOf("(")); // modified by Katya 22.11.2016 (till the "try" block)
+        String paramsString = methodFullName.substring(methodFullName.indexOf("(") + 1);
+        paramsString = paramsString.substring(0, paramsString.length() - 1);
         String pnetName = "";
+        FileInputStream fis = null;
         try {
-            final PetriNetsFrame petriNetsFrame = (PetriNetsFrame)frame;
-            final JScrollPane pane = petriNetsFrame.GetPetriNetPanelScrollPane();
-            final Point panelCenter = new Point(pane.getLocation().x + pane.getBounds().width / 2, pane.getLocation().y + pane.getBounds().height / 2);
-            final GraphPetriNet net = generateGraphNetBySimpleNet(panel, netLibraryManager.callMethod(methodFullName), panelCenter);
+            StringBuilder libraryText = new StringBuilder();
+
+            Path path = FilePathConfig.getNetLibraryPath();
+            // Check if file exists
+            if (path == null) {
+                throw new FileNotFoundException("NetLibrary.java not found in any configured location. Working directory: " +
+                    System.getProperty("user.dir"));
+            }
+
+            String pathNetLibrary = path.toString();
+            fis = new FileInputStream(pathNetLibrary); // modified by Katya 23.10.2016, by Inna 29.09.2018
+
+            int content;
+            while ((content = fis.read()) != -1) {
+		libraryText.append((char) content);
+            }
+            String methodBeginning = "public static PetriNet " + methodName + "("; // modified by Katya 20.11.2016
+            String methodEnding = "return d_Net;";
+            String methodText;
+
+            Pattern pattern = Pattern.compile(Pattern.quote(methodBeginning) + Pattern.quote(paramsString) + Pattern.quote(")") + "([[^}]^\\r]*)" + Pattern.quote(methodEnding)); // modified by Katya 22.11.2016
+            Matcher matcher = pattern.matcher(libraryText.toString());
+            if(matcher.find()){
+                 methodText = methodBeginning + paramsString + ")" + matcher.group(1) + methodEnding + "}"; // modified by Katya 22.11.2016
+            } 
+            else {
+                throw new FileNotFoundException("Method '" + methodName + "' with parameters '" + paramsString + "' not found in NetLibrary.java");
+            }
+            PetriNetsFrame petriNetsFrame = (PetriNetsFrame)frame;
+            JScrollPane pane = petriNetsFrame.GetPetriNetPanelScrollPane();
+            Point paneCenter = new Point(pane.getLocation().x+pane.getBounds().width/2, pane.getLocation().y+pane.getBounds().height/2);
+            GraphPetriNet net = generateGraphNetBySimpleNet(panel ,convertMethodToPetriNet(methodText), paneCenter);
             panel.addGraphNet(net);
             pnetName = net.getPetriNet().getName();
             panel.repaint();
-        } catch (final Exception exception) {
-            Logger.getLogger(FileUse.class.getName()).log(Level.SEVERE, null, exception);
+        } catch (FileNotFoundException e) {
+            MessageHelper.showException(frame, "Method not found in NetLibrary", e);
+        } catch (IOException ex) {
+            MessageHelper.showException(frame, "Error reading NetLibrary file", ex);
+        } catch (ExceptionInvalidTimeDelay ex) {
+            MessageHelper.showException(frame, "Invalid time delay in Petri net", ex);
+        } finally {
+            try {
+                if (fis != null) {
+                    fis.close();
+                }
+            } catch (IOException ex) {
+                Logger.getLogger(PetriNetsFrame.class.getName()).log(Level.SEVERE, null, ex);
+            }
         }
         return pnetName;
     }
     
+    public static String replaceGroup(String regex, String source, int groupToReplace, String replacement) {
+        StringBuilder result = new StringBuilder(source);
+        
+        boolean hasSequencesToProcess = true;
+        Pattern pattern = Pattern.compile(regex);
+        while (hasSequencesToProcess) {
+            Matcher m = pattern.matcher(source);
+            if (!m.find()) {
+                hasSequencesToProcess = false;
+            } else {
+                result = new StringBuilder(result.replace(m.start(groupToReplace), m.end(groupToReplace), replacement).toString());
+                
+            }
+        }
+        
+        return result.toString();
+    }
+    
     /**
-     * Process the code of a method (including header and { }) to replace
-     * numeric arguments with string parameter names
-     * @param code original method code
-     * @return processed code
+     * Process the code of NetLibrary.java, specifically, in methods that have arguments, 
+     * remove them from method's signature and replace their usage in the code with 
+     * string parameter names, so that the compiled method can be called without supplying
+     * any arguments.
+     * @param code NetLibrary.java source code
+     * @return processed code ready for compilation
      */
-    /*private String preProcessMethod(String code) {
+    public String preProcessNetLibraryCode(String code) {      
+        // remove arguments from method header
+        code = code.replaceAll("public\\s+static\\s+PetriNet\\s+(\\w+)\\s*\\((.+)\\)", "public static PetriNet $1()");
+        Matcher matcher = Pattern.compile("d_P\\.add\\(new PetriP\\(\"([^\"]+)\",\\s*(\\w+)\\)\\);").matcher(code);
+
+        StringBuilder sb = new StringBuilder();
+        while (matcher.find()) {
+            String markersParameter = matcher.group(2);
+            boolean isInt;
+            try {
+                int markers = Integer.parseInt(markersParameter);
+                isInt = true;
+            } catch (NumberFormatException e) {
+                isInt = false;
+            }
+            if (!isInt) {
+                String placeName = matcher.group(1);
+                String variableName = placeName;
+                String replacement = 
+                        "PetriP " + variableName + " = new PetriP(\""+placeName+"\", 0);\n"
+                        + variableName + ".setMarkParam(\""+markersParameter+"\");\n" 
+                        + "d_P.add("+variableName+");";
+                matcher.appendReplacement(sb, replacement);
+            } 
+            matcher.appendReplacement(sb, matcher.group(0));
+        }
+        matcher.appendTail(sb);
+        code = sb.toString();
+        code = code.replaceAll("d_T\\.add\\(new PetriT\\(\"([^\"]+)\",\\s*(\\w+)\\)\\);",
+                "PetriT $1 = new PetriT(\"$1\",0);\n" 
+                        + "$1.setParametrParam(\"$2\");\n" 
+                        + "d_T.add($1);");
         return code;
-    }*/
-    private static String generateArgumentsString(PetriNet net) { // added by Katya 08.12.2016
+    }
+
+    private String generateArgumentsString(PetriNet net) { // added by Katya 08.12.2016
         StringBuilder str = new StringBuilder();
         for (PetriP petriPlace : net.getListP()) {
             if (petriPlace.markIsParam()) {
@@ -636,7 +968,7 @@ public class FileUse {
         }
         for (PetriT T : net.getListT()) {
             if (T.parametrIsParam()) {
-                str.append("double ").append(T.getParametrParamName()).append(", ");
+                str.append("double ").append(T.getParameterParamName()).append(", ");
             }
             if (T.distributionIsParam()) {
                 str.append("String ").append(T.getDistributionParamName()).append(", ");
@@ -654,7 +986,7 @@ public class FileUse {
         return str.toString();
     }
 
-    public static void saveNetAsMethod(GraphPetriNet pnet, JTextArea area) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
+    public void saveNetAsMethod(GraphPetriNet pnet, JTextArea area) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
         PetriNet net;
         if (pnet.getPetriNet() == null) {
             pnet.createPetriNet("Untitled");
@@ -678,8 +1010,8 @@ public class FileUse {
         int j = 0;
         for (PetriT T : net.getListT()) {
             String parametrStr = T.parametrIsParam() // added by Katya 08.12.2016
-                ? T.getParametrParamName()
-                : Double.toString(T.getParametr());
+                ? T.getParameterParamName()
+                : Double.toString(T.getParameter());
             area.append("\t" + "d_T.add(new PetriT(" + "\"" + T.getName() + "\"," + parametrStr + "));\n");
             if (T.getDistribution() != null || T.distributionIsParam()) {
                 String distributionStr = T.distributionIsParam() // added by Katya 08.12.2016
@@ -738,5 +1070,235 @@ public class FileUse {
 
 
         area.append("}");
+    }
+
+ public String saveNetAsMethod(GraphPetriNet pnet) throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {
+     String s;
+     PetriNet net;
+        if (pnet.getPetriNet() == null) {
+            pnet.createPetriNet("Untitled");
+        }
+        net = pnet.getPetriNet();
+        s="\n";
+       s = s.concat("public static PetriNet CreateNet" + net.getName() + "(" + generateArgumentsString(net) + ") throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {\n" // modified by Katya 08.12.2016
+                + "\t" + "ArrayList<PetriP> d_P = new ArrayList<>();\n"
+                + "\t" + "ArrayList<PetriT> d_T = new ArrayList<>();\n"
+                + "\t" + "ArrayList<ArcIn> d_In = new ArrayList<>();\n"
+                + "\t" + "ArrayList<ArcOut> d_Out = new ArrayList<>();\n");
+
+
+        for (PetriP P : net.getListP()) {
+            String markStr = P.markIsParam() // added by Katya 08.12.2016
+                ? P.getMarkParamName()
+                : Integer.toString(P.getMark());
+            s = s.concat("\t" + "d_P.add(new PetriP(" + "\"" + P.getName() + "\"," + markStr + "));\n");
+        }
+
+        int j = 0;
+        for (PetriT T : net.getListT()) {
+            String parametrStr = T.parametrIsParam() // added by Katya 08.12.2016
+                ? T.getParameterParamName()
+                : Double.toString(T.getParameter());
+            s = s.concat("\t" + "d_T.add(new PetriT(" + "\"" + T.getName() + "\"," + parametrStr + "));\n");
+            if (T.getDistribution() != null || T.distributionIsParam()) {
+                String distributionStr = T.distributionIsParam() // added by Katya 08.12.2016
+                    ? T.getDistributionParamName()
+                    : T.getDistribution();
+                s = s.concat("\t" + "d_T.get(" + j + ").setDistribution(\"" + distributionStr + "\", d_T.get(" + j + ").getTimeServ());\n");
+                s = s.concat("\t" + "d_T.get(" + j + ").setParamDeviation(" + T.getParamDeviation() + ");\n");
+            }
+            if (T.getPriority() != 0 || T.priorityIsParam()) {
+                String priorityStr = T.priorityIsParam() // added by Katya 08.12.2016
+                    ? T.getPriorityParamName()
+                    : Integer.toString(T.getPriority());
+                s = s.concat("\t" + "d_T.get(" + j + ").setPriority(" + priorityStr + ");\n");
+            }
+            if (T.getProbability() != 1.0 || T.probabilityIsParam()) {
+                String probabilityStr = T.probabilityIsParam() // added by Katya 08.12.2016
+                    ? T.getProbabilityParamName()
+                    : Double.toString(T.getProbability());
+                s = s.concat("\t" + "d_T.get(" + j + ").setProbability(" + probabilityStr + ");\n");
+            }
+            j++;
+        }
+
+        j = 0;
+        for (ArcIn In : net.getArcIn()) {
+            String quantityStr = In.kIsParam() // added by Katya 08.12.2016
+                ? In.getKParamName()
+                : Integer.toString(In.getQuantity());
+           s =  s.concat("\t" + "d_In.add(new ArcIn(" + "d_P.get(" + In.getNumP() + ")," + "d_T.get(" + In.getNumT() + ")," + quantityStr + "));\n");
+
+            if (In.infIsParam()) { // modified by Katya 08.12.2016
+                s = s.concat("\t" + "d_In.get(" + j + ").setInf(" + In.getInfParamName() + ");\n");
+            } else if (In.getIsInf()) {
+                s = s.concat("\t" + "d_In.get(" + j + ").setInf(true);\n");
+            }
+            j++;
+        }
+
+        for (ArcOut Out : net.getArcOut()) {
+            String quantityStr = Out.kIsParam() // added by Katya 08.12.2016
+                ? Out.getKParamName()
+                : Integer.toString(Out.getQuantity());
+           s =  s.concat("\t" + "d_Out.add(new ArcOut(" + "d_T.get(" + Out.getNumT() + ")," + "d_P.get(" + Out.getNumP() + ")," + quantityStr + "));\n");
+        }
+
+        s = s.concat(
+                "\t" + "PetriNet d_Net = new PetriNet(\"" + net.getName() + "\",d_P,d_T,d_In,d_Out);\n");
+
+        s =  s.concat(
+                "\t" + "PetriP.initNext();\n"
+                + "\t" + "PetriT.initNext();\n"
+                + "\t" + "ArcIn.initNext();\n"
+                + "\t" + "ArcOut.initNext();\n"
+                + "\n\t" + "return d_Net;\n");
+
+       s =  s.concat("}");
+        return s;
+    }
+
+
+public void saveNetAsMethod(PetriNet pnet, JTextArea area) throws ExceptionInvalidNetStructure {
+        PetriNet net;
+        if (pnet == null) {
+            throw new ExceptionInvalidNetStructure("net from file is null") ;
+        }
+        net = pnet;
+        area.setText("\n");
+        area.append(
+                "public static PetriNet CreateNet" + net.getName() + "(" + generateArgumentsString(net) + ") throws ExceptionInvalidNetStructure, ExceptionInvalidTimeDelay {\n" // modified by Katya 08.12.2016
+                + "\t" + "ArrayList<PetriP> d_P = new ArrayList<>();\n"
+                + "\t" + "ArrayList<PetriT> d_T = new ArrayList<>();\n"
+                + "\t" + "ArrayList<ArcIn> d_In = new ArrayList<>();\n"
+                + "\t" + "ArrayList<ArcOut> d_Out = new ArrayList<>();\n");
+
+        for (PetriP P : net.getListP()) {
+            String markStr = P.markIsParam() // added by Katya 08.12.2016
+                ? P.getMarkParamName()
+                : Integer.toString(P.getMark());
+            area.append("\t" + "d_P.add(new PetriP(" + "\"" + P.getName() + "\"," + markStr + "));\n");
+        }
+
+        int j = 0;
+        for (PetriT T : net.getListT()) {
+            String parametrStr = T.parametrIsParam() // added by Katya 08.12.2016
+                ? T.getParameterParamName()
+                : Double.toString(T.getParameter());
+            area.append("\t" + "d_T.add(new PetriT(" + "\"" + T.getName() + "\"," + parametrStr + "));\n");
+            if (T.getDistribution() != null || T.distributionIsParam()) {
+                String distributionStr = T.distributionIsParam() // added by Katya 08.12.2016
+                    ? T.getDistributionParamName()
+                    : T.getDistribution();
+                area.append("\t" + "d_T.get(" + j + ").setDistribution(\"" + distributionStr + "\", d_T.get(" + j + ").getTimeServ());\n");
+                area.append("\t" + "d_T.get(" + j + ").setParamDeviation(" + T.getParamDeviation() + ");\n");
+            }
+            if (T.getPriority() != 0 || T.priorityIsParam()) {
+                String priorityStr = T.priorityIsParam() // added by Katya 08.12.2016
+                    ? T.getPriorityParamName()
+                    : Integer.toString(T.getPriority());
+                area.append("\t" + "d_T.get(" + j + ").setPriority(" + priorityStr + ");\n");
+            }
+            if (T.getProbability() != 1.0 || T.probabilityIsParam()) {
+                String probabilityStr = T.probabilityIsParam() // added by Katya 08.12.2016
+                    ? T.getProbabilityParamName()
+                    : Double.toString(T.getProbability());
+                area.append("\t" + "d_T.get(" + j + ").setProbability(" + probabilityStr + ");\n");
+            }
+            j++;
+        }
+
+        j = 0;
+        for (ArcIn In : net.getArcIn()) {
+            String quantityStr = In.kIsParam() // added by Katya 08.12.2016
+                ? In.getKParamName()
+                : Integer.toString(In.getQuantity());
+            area.append("\t" + "d_In.add(new ArcIn(" + "d_P.get(" + In.getNumP() + ")," + "d_T.get(" + In.getNumT() + ")," + quantityStr + "));\n");
+
+            if (In.infIsParam()) { // modified by Katya 08.12.2016
+                area.append("\t" + "d_In.get(" + j + ").setInf(" + In.getInfParamName() + ");\n");
+            } else if (In.getIsInf()) {
+                area.append("\t" + "d_In.get(" + j + ").setInf(true);\n");
+            }
+            j++;
+        }
+
+        for (ArcOut Out : net.getArcOut()) {
+            String quantityStr = Out.kIsParam() // added by Katya 08.12.2016
+                ? Out.getKParamName()
+                : Integer.toString(Out.getQuantity());
+            area.append("\t" + "d_Out.add(new ArcOut(" + "d_T.get(" + Out.getNumT() + ")," + "d_P.get(" + Out.getNumP() + ")," + quantityStr + "));\n");
+        }
+
+        area.append("\t" + "PetriNet d_Net = new PetriNet(\"" + net.getName() + "\",d_P,d_T,d_In,d_Out);\n");
+
+         area.append(
+                "\t" + "PetriP.initNext();\n"
+                + "\t" + "PetriT.initNext();\n"
+                + "\t" + "ArcIn.initNext();\n"
+                + "\t" + "ArcOut.initNext();\n"
+                + "\n\t" + "return d_Net;\n");
+
+
+        area.append("}");
+    }
+
+    public void saveMethodInNetLibrary(JTextArea area) {  //added by Inna 20.05.2013
+        try {
+            // Use FilePathConfig for cross-platform path resolution
+            Path path = FilePathConfig.getNetLibraryPath();
+
+            // Check if file exists
+            if (path == null) {
+                MessageHelper.showError(area, "NetLibrary.java not found in any configured location. Working directory: " +
+                    System.getProperty("user.dir"));
+                return;
+            }
+
+            String pathNetLibrary = path.toString(); //added by Inna 29.09.2018
+            RandomAccessFile f = new RandomAccessFile(pathNetLibrary, "rw");
+            long n = f.length();
+
+            if (n == 0) {
+                f.writeBytes("package LibNet;\n"
+                        +"import PetriObj.ExceptionInvalidNetStructure;\n"
+                        + "import PetriObj.PetriNet;\n"
+                        + "import PetriObj.PetriP;\n"
+                        + "import PetriObj.PetriT;\n"
+                        + "import PetriObj.ArcIn;\n"
+                        + "import PetriObj.ArcOut;\n"
+                        + "import java.util.ArrayList;\n"
+                        + "public class NetLibrary {\n\n"
+                        + "}");
+                n = f.length();
+            }
+
+            n -= 1;
+            f.seek(n);
+
+            String c = f.readLine();
+            while (c != null && !c.contains("}") && n > 0) {
+                //   System.out.println("n= "+n+ ",   line= "+c);
+                n -= 1;
+                f.seek(n);
+                c = f.readLine();
+            }
+
+            if (n > 0) {
+                f.seek(n - 1);
+                String s  = area.getText() + "\n" + c;
+                f.write(s.getBytes());
+
+                MessageHelper.showInfo(area, "Method was successfully added to NetLibrary class.");
+            } else {
+                MessageHelper.showError(area, "Could not find closing brace '}' in NetLibrary.java");
+            }
+            f.close();
+        } catch (IOException ex) {
+            MessageHelper.showException(area, "Error saving method to NetLibrary", ex);
+        }
+        
+        // Force to recompile the class next time any method from there is used
+        netLibraryClass = null;
     }
 }
